fix login, signup, logout

--- a/package.json
+++ b/package.json
@@ -26,6 +26,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  
+  "engines": {
+    "node": "4.1.1",
+    "npm": "2.1.x"
+  },
+  "scripts": {
+    "postinstall": "webpack"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC"
