--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  
+
   "engines": {
-    "node": "4.1.1",
-    "npm": "2.1.x"
+    "node": "6.10.1",
+    "npm": "3.10.10"
   },
   "scripts": {
     "postinstall": "webpack"
