--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "babel-preset-react": "^6.24.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-dropzone": "^3.13.3",
     "react-modal": "^2.2.2",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.2",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
+    "superagent": "^3.5.2",
     "webpack": "^3.3.0"
   },
   "devDependencies": {},
