--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "react-modal": "^2.2.2",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.2",
+    "react-slick": "^0.15.4",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
+    "slick-carousel": "^1.8.1",
     "superagent": "^3.5.2",
     "webpack": "^3.3.0"
   },
