--- a/package.json
+++ b/package.json
@@ -22,13 +22,14 @@
     "react-router-dom": "^4.1.2",
     "react-slick": "^0.15.4",
     "redux": "^3.7.2",
-    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "slick-carousel": "^1.8.1",
     "superagent": "^3.5.2",
     "webpack": "^3.3.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "redux-logger": "^3.0.6",
+  },
   "scripts": {
     "postinstall": "webpack",
     "heroku-postbuild": "webpack",
