--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "webpack": "^3.3.0"
   },
   "devDependencies": {
-    "redux-logger": "^3.0.6",
+    "redux-logger": "^3.0.6"
   },
   "scripts": {
     "postinstall": "webpack",
