--- a/config/database.yml
+++ b/config/database.yml
@@ -58,7 +58,9 @@ development:
 test:
   <<: *default
   database: EventListener_test
-
+  adapter: postgresql
+  pool: 5
+  timeout: 5000
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
 # ever seen by anyone, they now have access to your database.
