--- a/package.json
+++ b/package.json
@@ -28,8 +28,11 @@
     "superagent": "^3.5.2",
     "webpack": "^3.3.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "jest": "^22.4.3"
+  },
   "scripts": {
+    "test": "jests",
     "postinstall": "webpack",
     "heroku-postbuild": "webpack",
     "start": "webpack --w --progress"
