--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
     "doc": "docs",
     "test": "test"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gevuong/EventListenr"
+  },
   "dependencies": {
     "all": "^0.0.0",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "jquery": "^3.3.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-dropzone": "^3.13.3",
